kustomize/website-marco/statefulset.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: website-marco
spec:
  serviceName: website-marco
  replicas: 1
  updateStrategy:
    type: RollingUpdate
  template:
    spec:
      containers:
      - name: website
        image: nginxinc/nginx-unprivileged:1.27-alpine-slim
        ports:
        - name: http
          containerPort: 8080
        livenessProbe:
          httpGet:
            path: /
            port: http
          periodSeconds: 60
          timeoutSeconds: 30
          initialDelaySeconds: 15
        volumeMounts:
        - name: website-marco-storage
          mountPath: /usr/share/nginx/html
        - name: tmp-dir
          mountPath: /tmp
        resources:
          limits:
            cpu: 300m
            memory: 1Gi
          requests:
            cpu: 50m
            memory: 256Mi
      volumes:
      - name: tmp-dir
        emptyDir: {}
  volumeClaimTemplates:
  - metadata:
      name: website-marco-storage
    spec:
      accessModes:
        - "ReadWriteOnce"
      resources:
        requests:
          storage: "100Mi"
      storageClassName: nfs-data
