kustomize/website-marco/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: website-marco
spec:
  parentRefs:
    - name: eg-external
      group: gateway.networking.k8s.io
      kind: Gateway
      namespace: envoy-gateway-system
  hostnames:
    - www.kilchhofer.info
  rules:
    - backendRefs:
        - group: ""
          kind: Service
          name: website-marco
          port: 8080
          weight: 1
      matches:
        - path:
            type: PathPrefix
            value: /
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: website-marco-root-redirect
spec:
  parentRefs:
    - name: eg-external
      group: gateway.networking.k8s.io
      kind: Gateway
      namespace: envoy-gateway-system
  hostnames:
    - kilchhofer.info
  rules:
    - filters:
      - type: RequestRedirect
        requestRedirect:
          scheme: https
          statusCode: 301
          hostname: www.kilchhofer.info
