kustomize/website-marco/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: website-marco
  annotations:
    kubernetes.io/ingress.class: nginx-external
    nginx.ingress.kubernetes.io/configuration-snippet: |
      more_set_headers "Strict-Transport-Security: max-age=86400; includeSubDomains"
      more_set_headers "Content-Security-Policy: default-src 'self'; script-src 'self'"
      more_set_headers "Expect-CT: max-age=86400, enforce";
    nginx.ingress.kubernetes.io/from-to-www-redirect: "true"
    cert-manager.io/cluster-issuer: letsencrypt
    cert-manager.io/revision-history-limit: "1"
spec:
  ingressClassName: nginx-external
  rules:
  - host: www.kilchhofer.info
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: website-marco
            port:
              name: website-http
  tls:
  - hosts:
    - www.kilchhofer.info
    - kilchhofer.info
    secretName: website-marco-ingress-cert
